<resources>
    <string name="app_name">职厦无忧</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="interest_hint">经济/金融/计算机/自动化</string>
    <string name="interest_btn">开始使用</string>

    <string name="main_recruitment">校招</string>
    <string name="main_internship">实习</string>
    <string name="main_demand">需求</string>
    <string name="main_guide">指导</string>
    <string name="main_user">我的</string>
    
    <string name="search_search">搜索</string>
    <string name="search_hint">请输入关键词</string>

    <string name="user_love">猜你喜欢</string>
    <string name="user_collection">我的收藏</string>
    <string name="user_clear">清除缓存</string>
    <string name="user_feedback">意见反馈</string>
    <string name="user_update">版本更新</string>
    <string name="user_about">关于我们</string>

    <string name="collection_delete">删除</string>
    <string name="feedback_hint">请输入反馈意见</string>
    <string name="feedback_submit">提交</string>

    <string name="about_slogan">职厦无忧，只是为你</string>
    <string name="about_version">版本 1.0.0</string>
    <string name="about_right">Copyright © 2016. All Rights Reserved.</string>
    <string name="about_info">学校地址:厦门市思明南路422号之一\n办公地址：厦门大学嘉庚三513\n
        邮编:361005\n电话:0592-2184550,0592-2188609,0592-2184525\n传真:0592-2188160\n
        电子邮件:2184550@xmu.edu.cn\n主页:http://jyzd.xmu.edu.cn\n
        办公时间:周一至周五 (早上8:00-11:40; 下午2:30-5:30)</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
</resources>
