<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/include_header_user"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/about_iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/about_tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/about_slogan"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/about_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_tv_slogan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/about_version"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_tv_version"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/about_right"
            android:textSize="15sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:text="@string/about_info"/>
</LinearLayout>