<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RadioGroup
        android:id="@+id/main_rg_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp">
        <RadioButton
            android:id="@+id/main_rb_recuitment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/main_recruitment"
            android:textColor="@drawable/main_textcolor_bar"
            android:drawableTop="@drawable/main_bg_recruitment"/>
        <RadioButton
            android:id="@+id/main_rb_internship"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/main_internship"
            android:textColor="@drawable/main_textcolor_bar"
            android:drawableTop="@drawable/main_bg_internship"/>
        <RadioButton
            android:id="@+id/main_rb_demand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/main_demand"
            android:textColor="@drawable/main_textcolor_bar"
            android:drawableTop="@drawable/main_bg_demand"/>
        <RadioButton
            android:id="@+id/main_rb_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/main_user"
            android:textColor="@drawable/main_textcolor_bar"
            android:drawableTop="@drawable/main_bg_user"/>
    </RadioGroup>
    <View
        android:id="@+id/main_view_divide"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/main_rg_bar"
        android:background="@color/gray"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_view_divide"/>
    <ImageView
        android:id="@+id/main_iv_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@drawable/main_icon_tip"/>
</RelativeLayout>
